@@ -2,6 +2,7 @@
 #define _IOSDBG_H_
 
 #include "dbgcmd.h" // Includes defs.h, for execute_command
+#include "handlers.h"
 
 /* Both unused. */
 kern_return_t catch_mach_exception_raise_state(mach_port_t exception_port, exception_type_t exception, exception_data_t code, mach_msg_type_number_t code_count, int *flavor, thread_state_t in_state, mach_msg_type_number_t in_state_count, thread_state_t out_state, mach_msg_type_number_t *out_state_count){return KERN_FAILURE;}
